Add missing metadata for internal users file

--- a/roles/nephelaiio.elasticsearch/templates/elasticsearch-internal-users.yml.j2
+++ b/roles/nephelaiio.elasticsearch/templates/elasticsearch-internal-users.yml.j2
@@ -1,4 +1,8 @@
 ---
+_meta:
+  type: "internalusers"
+  config_version: 2
+
 {{ elasticsearch_config_admin_user }}:
   hash: "{{ elasticsearch_config_admin_pass | password_hash('bcrypt') }}"
   reserved: true
