--- a/roles/nephelaiio.kibana/templates/kibana.yml.j2
+++ b/roles/nephelaiio.kibana/templates/kibana.yml.j2
@@ -2,7 +2,7 @@
 server.host: 0.0.0.0
 server.name: {{ kibana_config_url }}
 server.port: {{ kibana_service_port }}
-logging.verbose: true
+logging.verbose: false
 elasticsearch.preserveHost: true
 elasticsearch.ssl.verificationMode: full
 elasticsearch.ssl.certificate: {{ kibana_config_ssl_cert }}
