--- a/roles/nephelaiio.elasticsearch/templates/elasticsearch-internal-users.yml.j2
+++ b/roles/nephelaiio.elasticsearch/templates/elasticsearch-internal-users.yml.j2
@@ -8,6 +8,8 @@ _meta:
   reserved: true
   backend_roles:
     - "admin"
+    - "kibana_user"
+    - "security_rest_api_access"
   description: "Admin user"
 
 {{ elasticsearch_config_kibana_user }}:
@@ -28,10 +30,3 @@ _meta:
   backend_roles:
     - "logstash" 
   description: "Logstash user"
-
-{{ elasticsearch_config_kibana_admin_user }}:
-  hash: "{{ elasticsearch_config_kibana_admin_pass | password_hash('bcrypt') }}"
-  reserved: false
-  backend_roles:
-    - "kibanauser"
-  description: "Kibana admin user"
