--- a/roles/nephelaiio.elasticsearch/templates/elasticsearch-main.yml.j2
+++ b/roles/nephelaiio.elasticsearch/templates/elasticsearch-main.yml.j2
@@ -26,7 +26,7 @@ opendistro_security.ssl.transport.pemcert_filepath: {{ elasticsearch_config_node
 opendistro_security.ssl.transport.pemkey_filepath: {{ elasticsearch_config_node_key  | basename }}
 opendistro_security.ssl.transport.pemtrustedcas_filepath: {{ elasticsearch_config_ca_cert  | basename }}
 opendistro_security.ssl.transport.enforce_hostname_verification: false
-opendistro_security.ssl.http.enabled: true
+opendistro_security.ssl.http.enabled: false
 opendistro_security.ssl.http.pemcert_filepath: {{ elasticsearch_config_node_cert  | basename }}
 opendistro_security.ssl.http.pemkey_filepath: {{ elasticsearch_config_node_key  | basename }}
 opendistro_security.ssl.http.pemtrustedcas_filepath: {{ elasticsearch_config_ca_cert  | basename }}
