--- a/roles/nephelaiio.kibana/templates/kibana.yml.j2
+++ b/roles/nephelaiio.kibana/templates/kibana.yml.j2
@@ -2,13 +2,15 @@
 server.host: 0.0.0.0
 server.name: {{ kibana_config_url }}
 server.port: {{ kibana_service_port }}
-logging.verbose: false
+logging.verbose: true
 elasticsearch.preserveHost: true
+{% if kibana_config_elasticsearch_proto == 'https' %}
 elasticsearch.ssl.verificationMode: full
 elasticsearch.ssl.certificate: {{ kibana_config_ssl_cert }}
 elasticsearch.ssl.certificateAuthorities:
   - {{ kibana_config_ssl_ca_cert }}
 elasticsearch.ssl.key: {{ kibana_config_ssl_key }}
+{% endif %}
 elasticsearch.hosts:
 {% for kibana_host in kibana_config_elasticsearch_hosts %}
   - {{ kibana_host }}
