Skip local users from ldap authorization checks

--- a/roles/nephelaiio.elasticsearch/templates/elasticsearch-security.yml.j2
+++ b/roles/nephelaiio.elasticsearch/templates/elasticsearch-security.yml.j2
@@ -42,14 +42,6 @@ config:
             verify_hostnames: false
 
     authz:
-      internal:
-        type: username
-        authentication_backend: intern
-        allowed_tries: 10
-        time_window_seconds: 3600
-        block_expiry_seconds: 600
-        max_blocked_clients: 100000
-        max_tracked_clients: 100000
       wpnopsbiz:
         description: wpnops.biz ldap authorization
         http_enabled: true
@@ -73,3 +65,8 @@ config:
             rolesearch: '(member={0})'
             rolebase: '{{ elasticsearch_config_ldap_rolebase }}'
             rolename: cn
+            skip_users:
+              - '{{ elasticsearch_config_admin_user }}'
+              - '{{ elasticsearch_config_kibana_user }}'
+              - '{{ elasticsearch_config_logstash_user }}'
+              - '{{ elasticsearch_config_metricbeat_user }}'
