--- a/roles/nephelaiio.elasticsearch/templates/elasticsearch-internal-users.yml.j2
+++ b/roles/nephelaiio.elasticsearch/templates/elasticsearch-internal-users.yml.j2
@@ -15,6 +15,8 @@ _meta:
 {{ elasticsearch_config_kibana_user }}:
   hash: "{{ elasticsearch_config_kibana_pass | password_hash('bcrypt') }}"
   reserved: true
+  backend_roles:
+    - "kibana_server"
   description: "Kibana user"
 
 {{ elasticsearch_config_logstash_user }}:
